# palme

./: Procfile  manage.py  pyproject.toml
palme/: asgi.py  settings.py
products/: models.py  urls.py
products/migrations/: 0001_initial.py
products/templates/products/: index.html
src/palme/: settings.py  urls.py  wsgi.py
src/products/: apps.py  hooks.py  views.py
src/products/templates/products/: payment_canceled.html
